lang/tests/compile_fail/pod_string_invalid_pfx.stderr
error[E0080]: evaluation panicked: PodString<N, PFX>: PFX must be 1, 2, 4, or 8
 --> $CARGO/zeropod-$VERSION/src/pod/string.rs
  |
  | /         assert!(
  | |             PFX == 1 || PFX == 2 || PFX == 4 || PFX == 8,
  | |             "PodString<N, PFX>: PFX must be 1, 2, 4, or 8"
  | |         );
  | |_________^ evaluation of `quasar_lang::String::<10, 3>::_CAP_CHECK` failed here

note: erroneous constant encountered
 --> $CARGO/zeropod-$VERSION/src/pod/string.rs
  |
  |     pub const VALID: () = Self::_CAP_CHECK;
  |                           ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> tests/compile_fail/pod_string_invalid_pfx.rs:6:15
  |
6 | const _: () = PodString::<10, 3>::VALID;
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^
